--- a/screencaster.1
+++ b/screencaster.1
@@ -5,7 +5,7 @@
 .SH NAME
 screencaster \- capture screencasts
 .SH SYNOPSIS
-.B /usr/local/lib/screencaster 
+.B screencaster [-h --help -p --pause -s --start]
 .SH DESCRIPTION
 .B screencaster
 records whatever happens in the window chosen by the user, and the audio from
